[package]
name = "c_api_prefix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
description="A Rust Macro that adds required prefixes to functions to allow for C function bindings"
license="MIT"
repository="https://github.com/polysoft1/c_api_prefix"

[lib]
proc-macro=true

[dependencies]
syn = {version = "1.0.86", features = ["full"] }
quote = "1.0.15"
proc-macro2 = "1.0.36"
